fixed carousel dots spacing

--- a/designgraphique.css
+++ b/designgraphique.css
@@ -34,7 +34,7 @@ img {
     width: 100%;
     max-width: 100%;
     margin: 0;
-    padding: 2rem;
+    padding: 1rem;
     box-sizing: border-box;
 
 }
@@ -47,7 +47,6 @@ img {
     position: relative;
     display: flex;
     background-color: peachpuff !important ;
-    margin-bottom: 4rem;
     width: 100vw;
     flex-direction: column;
     justify-content: center;
@@ -55,7 +54,7 @@ img {
     padding: 2rem;
 
     a {
-        margin: 2em auto;
+        margin: 0 auto 0.9em;
         text-decoration: none;
         z-index: 2;
     }
@@ -82,7 +81,7 @@ img {
     .green-button{
         
         position: relative;
-        top: 1em;
+        top: 1.4em;
     }
     .histoire-text {
         width: 50%;
@@ -126,12 +125,23 @@ img {
 
 /* Services Section */
 #services {
-    margin-bottom: 4rem;
     display: flex;
     flex-direction: column;
     width: 98vw;
-}
+    padding-bottom: 1em;
 
+    h2{
+        margin-top: 0.5em;
+    }
+}
+#services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .green-button {
+        margin: 0 auto 1em auto;
+    }
+}
 #services h2 {
     font-size: 32px;
     text-align: right;
@@ -146,7 +156,7 @@ img {
 #portfolio {
     position: relative;
     background-color: peachpuff !important;
-    padding: 3rem;
+    padding: 2rem;
     
     .bg-img {
         background: linear-gradient(to bottom, 
@@ -190,7 +200,7 @@ img {
 
 .carousel-wrapper {
     width: 100%;
-    min-height: 400px;
+    min-height: 24em;
     display: flex;
     justify-content: center;
     overflow: visible;
@@ -304,7 +314,6 @@ img {
     gap: 0.5rem;
     position: relative;
     z-index: 6;
-    padding-bottom: 3rem;
 }
 
 .dot {
@@ -543,6 +552,14 @@ img {
     transform: translateY(-2px);
 }
 
+@media (min-width: 1440px) {
+    .modal-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+    .carrousel-wrapper{
+        margin-bottom: 2em;
+    }
+}
 @media (min-width: 768px) {
     .modal-grid {
         grid-template-columns: 1fr 1fr;
@@ -559,7 +576,11 @@ img {
         .histoire-text{
             border-radius: 25px;
         }
+        .green-button{
+            top: 0;
+        }
     }
+
     
 }
 @media screen and (max-width: 767px) {
@@ -598,26 +619,47 @@ img {
     }
     @media screen and (max-width: 426px) {
     
-    #portfolio h2 {
-        margin-left: 2em;
+        #histoire{
+            .green-button{
+                top: 0.9em;
+            }
+          
+        }
+        #portfolio h2 {
+            margin-left: 2em;
+        }
+
+        .carousel-dots{
+            padding-bottom: 1em ;
         }
     }
+    
+}
+@media screen and (max-width: 325px) {
+    
+    .carousel-wrapper{
+        min-height: 22em;
+    }
+    .carousel-dots{
+        padding-top: 1em ;
+    }
+   
 }
 @media screen and (min-width:426px) and (max-width: 769px) {
      /* Carousel Adjustments */
      .carousel-wrapper {
-        min-height: 450px;
+        min-height: 475px;
     }
 
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 376px) and (max-width: 426px) {
     /* Portfolio Section */
     .carousel-dots{
-        padding: 0em 0 2em 0 !important;
+        padding: 0em 0 1em 0 !important;
 
     }
-    .carrousel-wrapper{
-        min-height: 425px !important;
+    .carousel-wrapper{
+        min-height: 26em;
     }
 }
 
@@ -682,9 +724,9 @@ img {
         display: none;
     }
 
-    .carousel-dots{
+    /* .carousel-dots{
         padding: 2em;
-    }
+    } */
     .carousel-items {
         height: 20em;
     }
@@ -713,9 +755,15 @@ img {
 }
 
 /* Desktop Styles */
+@media screen and (min-width: 1440px) {
+    .carousel-wrapper{
+        min-height: 27em;
+    }
+    
+}
 @media (min-width: 1024px) {
     .carousel-wrapper {
-        min-height: 25em;
+    
         bottom: 10em;
     }
 
